<resources>
    <string name="app_name">Android Firebase Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="display_name_label">Display name : </string>
    <string name="fire_base_id">Fire base id</string>
    <string name="log_out">Log out</string>
</resources>