<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fillViewport="true"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/authenticationImageIc"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/ic_authentication" />
            </RelativeLayout>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:hint="@string/email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:hint="@string/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#9BCB65"
                android:textColor="@android:color/white"
                android:text="@string/login"
                android:textAllCaps="false"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#9BCB65"
                android:textColor="@android:color/white"
                android:text="@string/register"
                android:textAllCaps="false"
                />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</RelativeLayout>
